# vectorize-cli

./: README.md  etcd_task.py  manage.py  pyproject.toml  run  spawn_machine.py  task_monitor.py  vectorize.py  vectorize_etcd.py
vectorize_cli/: backend.py  manage.py  task_monitor.py  vectorize.py  vectorize_etcd.py
vectorize_cli/backends/: bloom.py  model.py  mxbai.py
