[tool.poetry]
name = "vectorize-cli"
version = "0.1.0"
description = ""
authors = ["Matthijs van Otterdijk <matthijs@terminusdb.com>"]
license = "Apache2"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.2.2"
transformers = "^4.39.3"
apache-libcloud = "^3.8.0"
boto3 = "^1.34.76"
paramiko = "^3.4.0"
etcd3 = "^0.12.0"
protobuf = "^3.20.0"
systemd-python = "^235"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
vectorize-server = "vectorize_cli.vectorize_etcd:main"
task-monitor = "vectorize_cli.task_monitor:main"